2005-03-09  Darin Adler  <darin@apple.com>

        * DOM.subproj/DOMPrivate.h: Checked in file copied from WebCore.

2005-03-08  Richard Williamson   <rjw@apple.com>

        Fixed <rdar://problem/4036949> many JPEG images fail to incremental-load due to change in ImageIO JPEG header parsing (to be fixed in WebKit)
	Fixed <rdar://problem/4042570> Need to check image properties for presence of width/height properties

	ImageIO-55 changed how image properties are created.  They
	are now created incrementally.  So we need "re-get" the image
	properties if the properties we care about (width/height) aren't
	in the property dictionary.

        Reviewed by John.

        * WebCoreSupport.subproj/WebImageData.h:
        * WebCoreSupport.subproj/WebImageData.m:
        (-[WebImageData init]):
        (-[WebImageData fileProperties]):
        (-[WebImageData propertiesAtIndex:]):
        (-[WebImageData _isSizeAvailable]):
        (-[WebImageData incrementalLoadWithBytes:length:complete:callback:]):
        (-[WebImageData size]):

2005-03-08  John Sullivan  <sullivan@apple.com>

        A couple of tweaks to the previous patch, from Darin's review.

        * Misc.subproj/WebNSPasteboardExtras.m:
        (_writableTypesForImageWithoutArchive):
        remove unnecessary _web prefix
        (_writableTypesForImageWithArchive):
        ditto
        (+[NSPasteboard _web_writableTypesForImageIncludingArchive:]):
        use mutableCopy rather than initWithArray:, and adjust for name changes

2005-03-08  John Sullivan  <sullivan@apple.com>

        Reviewed by Ken.
        
        - fixed <rdar://problem/4031826> REGRESSION (Mail): standalone images from 
        Safari can't be pasted into Mail (WebKit part of fix)
        
        We were always declaring webarchive-related pasteboard types, even in the standalone
        image cases where we had no webarchive. Unfortunately, the WebView pasteboard-related